--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/poppins": "^5.0.13",
-    "astro": "^4.6.3",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "@astrojs/check": "0.5.10",
+    "@astrojs/tailwind": "5.1.0",
+    "@fontsource/poppins": "5.0.13",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "astro": "4.6.3",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
