--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "josevte.com",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -16,6 +16,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "astro": "4.6.3",
+    "pdfjs": "2.5.3",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   }
